--- a/src/app/bio-details/bio-details.component.html
+++ b/src/app/bio-details/bio-details.component.html
@@ -4,17 +4,20 @@
         <th>Favorite Language</th>    
         <th>Year Started</th>    
     </tr>
-    <div *ngIf="dev">        
-          <tr>                   
-              <td>
-                {{dev.firstName + ' ' + dev.lastName}}
-              </td>  
-              <td>
-                {{dev.favoriteLanguage}}
-              </td>     
-              <td>
-                {{dev.yearStarted}}
-              </td>          
-          </tr>        
-  </div>   
+    @if (dev){
+      <div>         
+        <tr>                   
+            <td>
+              {{dev.firstName + ' ' + dev.lastName}}
+            </td>  
+            <td>
+              {{dev.favoriteLanguage}}
+            </td>     
+            <td>
+              {{dev.yearStarted}}
+            </td>          
+        </tr>        
+      </div> 
+    }
+    
   </table>
