--- a/src/app/bio-create/bio-create.component.html
+++ b/src/app/bio-create/bio-create.component.html
@@ -16,5 +16,6 @@
     </p>
     <p>
         <button type="submit" [disabled]="!bioForm.valid">Submit</button>
+        <button type="submit" (click) = "deleteDeveloper()">Delete</button>
     </p>
 </form>
